fixed overflow on the footer.

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,6 @@ button:hover {
 
 footer {
     width: 100%;
-    overflow: hidden;
 }
 
 footer ul {
